--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 </div>
          </header>
          <main>
-         
-         <aside class="left"><img src="anuncios-publicitarios2-e1663260083676.webp" alt="">
-            <img src="lays.webp" alt="">
-        </aside>
-          <aside class="right"><img src="5c5ab4004422e33b4827b7882867022d.jpg" alt="">
-            <img src="gtaV.jpg" alt="">
-        </aside>
+            <aside class="left">
+                <img src="image5.jpg" alt="">
+                <img src="nintendo.jpg" alt="">
+            </aside>
+              <aside class="right"><img src="5c5ab4004422e33b4827b7882867022d.jpg" alt="">
+                <img src="gtaV.jpg" alt="">
+            </aside>
 
 
          <section class="s1">
