--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <nav>
                 <a href="">Inicio </a>
                 <a href="">Caracteristicas </a>
-                <a href="">Comprar</a>
+                <a href="formulario.html">Conocenos</a>
             
                 </nav>
                 </div>
